create github pages

--- a/contact-serio-design-fx-best-video-social-media.html
+++ b/contact-serio-design-fx-best-video-social-media.html
@@ -62,7 +62,21 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
     </amp-sidebar>
 
 <!-- Google Analytics -->
-<!-- AMP Analytics --><script async="" custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+<amp-analytics type="googleanalytics">
+<script type="application/json">
+{
+  "vars": {
+    "account": "UA-106488889-1"
+  },
+  "triggers": {
+    "trackPageview": {
+      "on": "visible",
+      "request": "pageview"
+    }
+  }
+}
+</script>
+</amp-analytics>
 <!-- /Google Analytics -->
 
 
@@ -123,7 +137,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 
 </section>
 
-<amp-animation layout="nodisplay" trigger="visibility" class="cid-qY0HL4x6OJ" id="header7-8" data-rv-view="864">
+<amp-animation layout="nodisplay" trigger="visibility" class="cid-qY0HL4x6OJ" id="header7-8" data-rv-view="487">
     <script type="application/json">
     {
         "--width": "calc(0px - width('.animated-text'))",
@@ -160,7 +174,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 
         <div class="mbr-row mbr-justify-content-center">
             <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-6" data-form-type="formoid">
-                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7tQ/HzADzazJR4vV2ato/E2SxdQqMYAR2XH2N2AXE5ZydBlRF3pTIf/MN2cLfDKnWrSR9/SQ0GNNpdRqvxrrR8drr3nfAHxQYv9Ff3RwgqrY+ZCZp01BwMofbv/98McJ">
+                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7Kr3CrZV/0Cv1x4ZL0iKIl2MoYHmUNuJy4iIvxH6dfIUQTqTxUj8D5Pv8jWAFBSuU07ujaLZHEdPBhYglc3H9jXmMP5KMBLmpp/lIMqYfqvgnrhDInrxMFnlIV3gSo8j">
                     <div submit-success="">
                         <template data-form-alert="" type="amp-mustache">Email sent successfully!</template>
                     </div>
