--- a/ourstory.html
+++ b/ourstory.html
@@ -62,7 +62,21 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
     </amp-sidebar>
 
 <!-- Google Analytics -->
-<!-- AMP Analytics --><script async="" custom-element="amp-analytics" src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"></script>
+<amp-analytics type="googleanalytics">
+<script type="application/json">
+{
+  "vars": {
+    "account": "UA-106488889-1"
+  },
+  "triggers": {
+    "trackPageview": {
+      "on": "visible",
+      "request": "pageview"
+    }
+  }
+}
+</script>
+</amp-analytics>
 <!-- /Google Analytics -->
 
 
@@ -307,17 +321,17 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
         <div class="mbr-row mbr-justify-content-center">            
             <div class="amp-accordion mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8 mbr-col-xl-8 align-left">
                 <div class="accordion-item">
-                    <h2 tabindex="0" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item154.toggleVisibility,amp-accordion-item254.hide,amp-accordion-item354.hide,amp-accordion-item454.hide,amp-accordion-item554.hide,amp-accordion-item654.hide">HONESTY&nbsp;</h2>
-                    <div class="accordion-item-body" id="amp-accordion-item154">
+                    <h2 tabindex="0" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item152.toggleVisibility,amp-accordion-item252.hide,amp-accordion-item352.hide,amp-accordion-item452.hide,amp-accordion-item552.hide,amp-accordion-item652.hide">HONESTY&nbsp;</h2>
+                    <div class="accordion-item-body" id="amp-accordion-item152">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We will answer all questions with a truthful answer within the scope of our experience.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="1" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item154.hide,amp-accordion-item254.toggleVisibility,amp-accordion-item354.hide,amp-accordion-item454.hide,amp-accordion-item554.hide,amp-accordion-item654.hide">
+                    <h2 tabindex="1" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item152.hide,amp-accordion-item252.toggleVisibility,amp-accordion-item352.hide,amp-accordion-item452.hide,amp-accordion-item552.hide,amp-accordion-item652.hide">
                         INTEGRITY</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item254">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item252">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             Our services depend on the trust and effectiveness of our communications. &nbsp;We strive for openess and transparency in our dealings with clients. We will communicate regularly with the client and report on our activities completely
 and truthfully.</p>
@@ -325,35 +339,35 @@ and truthfully.</p>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="2" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item154.hide,amp-accordion-item254.hide,amp-accordion-item354.toggleVisibility,amp-accordion-item454.hide,amp-accordion-item554.hide,amp-accordion-item654.hide">
+                    <h2 tabindex="2" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item152.hide,amp-accordion-item252.hide,amp-accordion-item352.toggleVisibility,amp-accordion-item452.hide,amp-accordion-item552.hide,amp-accordion-item652.hide">
                         SERVICE</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item354">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item352">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We approach all projects and clients realizing that we provide a service. Our objective is to provide the best service and guidance within our experience.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="3" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item154.hide,amp-accordion-item254.hide,amp-accordion-item354.hide,amp-accordion-item454.toggleVisibility,amp-accordion-item554.hide,amp-accordion-item654.hide">TEAM PLAYER</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item454">
+                    <h2 tabindex="3" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item152.hide,amp-accordion-item252.hide,amp-accordion-item352.hide,amp-accordion-item452.toggleVisibility,amp-accordion-item552.hide,amp-accordion-item652.hide">TEAM PLAYER</h2>
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item452">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             Our relationship with the client is as a member of the team. We wear many hats during the relationship and our focus is on the success of the client.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="4" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item154.hide,amp-accordion-item254.hide,amp-accordion-item354.hide,amp-accordion-item454.hide,amp-accordion-item554.toggleVisibility,amp-accordion-item654.hide">
+                    <h2 tabindex="4" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item152.hide,amp-accordion-item252.hide,amp-accordion-item352.hide,amp-accordion-item452.hide,amp-accordion-item552.toggleVisibility,amp-accordion-item652.hide">
                         MASTERY</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item554">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item552">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We strive to master our knowledge and develop intuitively. We are constantly researching and learning looking for new ways to apply our skills.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="5" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item154.hide,amp-accordion-item254.hide,amp-accordion-item354.hide,amp-accordion-item454.hide,amp-accordion-item554.hide,amp-accordion-item654.toggleVisibility">
+                    <h2 tabindex="5" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item152.hide,amp-accordion-item252.hide,amp-accordion-item352.hide,amp-accordion-item452.hide,amp-accordion-item552.hide,amp-accordion-item652.toggleVisibility">
                         LEADERSHIP</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item654">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item652">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We are constantly looking for the shortest distance to accomplish your goals. Simplicity is the key but it does not mean simplication.</p>
                     </div>
