--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/seriodesignfxlogonewblackbgrd-128x128.png" type="image/x-icon">
   <meta name="description" content=" FREE phone consultation; Your business will be helped to grow with video web design.. You may be surprised to learn that adding video to your landing page could be one of the most lucrative moves you can make  combined with social media video lead generation,  social media management and a proactive SEO programs. Services designed for needs and goals of business. You can schedule a FREE phone consultation here. ">
-  <title>Helping You Grow Your Business Web Social Media  Presence </title>
+  <title>SERIO Design FX |  Helping You Grow Your Business With  Video Marketing </title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="canonical" href="index.html">
  <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style>
@@ -597,7 +597,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
     </div>
 </section>
 
-<amp-animation layout="nodisplay" trigger="visibility" class="cid-qXUiZmdUy6" id="header7-1" data-rv-view="840">
+<amp-animation layout="nodisplay" trigger="visibility" class="cid-qXUiZmdUy6" id="header7-1" data-rv-view="493">
     <script type="application/json">
     {
         "--width": "calc(0px - width('.animated-text'))",
