--- a/company.html
+++ b/company.html
@@ -47,9 +47,9 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                     </div>
                 </li>
                 
-                <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="false">
+                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="false">
                         Services
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-social-media-videos-milwaukee-digital-producer.html#header2-5a">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-creative-agency-social-media-video-portfolio.html#header2-4x" aria-expanded="true">Video Marketing</a></div></li>
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-social-media-videos-milwaukee-digital-producer.html#header2-5a">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-creative-agency-social-media-video-portfolio.html#header2-4x" aria-expanded="true">Video Marketing</a><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="true">Video Subscriptions</a></div></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="ourstory.html">
                         About Us
@@ -111,9 +111,9 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                     </div>
                 </li>
                 
-                <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="false">
+                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="false">
                         Services
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-social-media-videos-milwaukee-digital-producer.html#header2-5a">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-creative-agency-social-media-video-portfolio.html#header2-4x" aria-expanded="true">Video Marketing</a></div></li>
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-social-media-videos-milwaukee-digital-producer.html#header2-5a">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-creative-agency-social-media-video-portfolio.html#header2-4x" aria-expanded="true">Video Marketing</a><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="true">Video Subscriptions</a></div></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="ourstory.html">
                         About Us
