--- a/contact-serio-design-fx-best-video-social-media.html
+++ b/contact-serio-design-fx-best-video-social-media.html
@@ -48,9 +48,9 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                     </div>
                 </li>
                 
-                <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="false">
+                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="false">
                         Services
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-social-media-videos-milwaukee-digital-producer.html#header2-5a">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-creative-agency-social-media-video-portfolio.html#header2-4x" aria-expanded="true">Video Marketing</a></div></li>
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-social-media-videos-milwaukee-digital-producer.html#header2-5a">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-creative-agency-social-media-video-portfolio.html#header2-4x" aria-expanded="true">Video Marketing</a><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="true">Video Subscriptions</a></div></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="ourstory.html">
                         About Us
@@ -112,9 +112,9 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                     </div>
                 </li>
                 
-                <li class="nav-item dropdown"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="false">
+                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="false">
                         Services
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-social-media-videos-milwaukee-digital-producer.html#header2-5a">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-creative-agency-social-media-video-portfolio.html#header2-4x" aria-expanded="true">Video Marketing</a></div></li>
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-social-media-videos-milwaukee-digital-producer.html#header2-5a">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-creative-agency-social-media-video-portfolio.html#header2-4x" aria-expanded="true">Video Marketing</a><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="true">Video Subscriptions</a></div></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="ourstory.html">
                         About Us
@@ -137,7 +137,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 
 </section>
 
-<amp-animation layout="nodisplay" trigger="visibility" class="cid-qY0HL4x6OJ" id="header7-8" data-rv-view="1007">
+<amp-animation layout="nodisplay" trigger="visibility" class="cid-qY0HL4x6OJ" id="header7-8" data-rv-view="2569">
     <script type="application/json">
     {
         "--width": "calc(0px - width('.animated-text'))",
@@ -174,7 +174,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 
         <div class="mbr-row mbr-justify-content-center">
             <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-6" data-form-type="formoid">
-                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="p3suUE7iJapaPO7YQM+4sIK162IHFxF77KVvNN05xAGa2qfcdOoq+m1X6xEYGnUi/fIYdM5gopgx7KBm57UZ5Hqn9Y88kRfmkWmrcsnZStFboKz4UMLpMp6kep86M86l">
+                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="rJlnh4fCYGZgmiOSpfhv60poS6wf827sGEpDdnzBprrsjBNUreC1uIEPjJFfwJ0CIah/W63qf9CKURjBPFyoLETdx1y7Z3O2LYwzlPXKxChYqiFovWBKm4DKYeEycoQ0">
                     <div submit-success="">
                         <template data-form-alert="" type="amp-mustache">Email sent successfully!</template>
                     </div>
