create github pages

--- a/ourstory.html
+++ b/ourstory.html
@@ -48,9 +48,9 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                     </div>
                 </li>
                 
-                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="false">
+                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="true">
                         Services
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-social-media-videos-milwaukee-digital-producer.html#header2-5a">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-creative-agency-social-media-video-portfolio.html#header2-4x" aria-expanded="true">Video Marketing</a><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="true">Video Subscriptions</a></div></li>
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-social-media-videos-milwaukee-digital-producer.html#header2-5a">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html" aria-expanded="false">Video Marketing</a><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="false">Video Subscriptions</a></div></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="ourstory.html">
                         About Us
@@ -112,9 +112,9 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                     </div>
                 </li>
                 
-                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="false">
+                <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="true">
                         Services
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-social-media-videos-milwaukee-digital-producer.html#header2-5a">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-creative-agency-social-media-video-portfolio.html#header2-4x" aria-expanded="true">Video Marketing</a><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="true">Video Subscriptions</a></div></li>
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-social-media-videos-milwaukee-digital-producer.html#header2-5a">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html" aria-expanded="false">Video Marketing</a><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="false">Video Subscriptions</a></div></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="ourstory.html">
                         About Us
@@ -321,17 +321,17 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
         <div class="mbr-row mbr-justify-content-center">            
             <div class="amp-accordion mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8 mbr-col-xl-8 align-left">
                 <div class="accordion-item">
-                    <h2 tabindex="0" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item172.toggleVisibility,amp-accordion-item272.hide,amp-accordion-item372.hide,amp-accordion-item472.hide,amp-accordion-item572.hide,amp-accordion-item672.hide">HONESTY&nbsp;</h2>
-                    <div class="accordion-item-body" id="amp-accordion-item172">
+                    <h2 tabindex="0" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item183.toggleVisibility,amp-accordion-item283.hide,amp-accordion-item383.hide,amp-accordion-item483.hide,amp-accordion-item583.hide,amp-accordion-item683.hide">HONESTY&nbsp;</h2>
+                    <div class="accordion-item-body" id="amp-accordion-item183">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We will answer all questions with a truthful answer within the scope of our experience.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="1" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item172.hide,amp-accordion-item272.toggleVisibility,amp-accordion-item372.hide,amp-accordion-item472.hide,amp-accordion-item572.hide,amp-accordion-item672.hide">
+                    <h2 tabindex="1" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item183.hide,amp-accordion-item283.toggleVisibility,amp-accordion-item383.hide,amp-accordion-item483.hide,amp-accordion-item583.hide,amp-accordion-item683.hide">
                         INTEGRITY</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item272">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item283">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             Our services depend on the trust and effectiveness of our communications. &nbsp;We strive for openess and transparency in our dealings with clients. We will communicate regularly with the client and report on our activities completely
 and truthfully.</p>
@@ -339,35 +339,35 @@ and truthfully.</p>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="2" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item172.hide,amp-accordion-item272.hide,amp-accordion-item372.toggleVisibility,amp-accordion-item472.hide,amp-accordion-item572.hide,amp-accordion-item672.hide">
+                    <h2 tabindex="2" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item183.hide,amp-accordion-item283.hide,amp-accordion-item383.toggleVisibility,amp-accordion-item483.hide,amp-accordion-item583.hide,amp-accordion-item683.hide">
                         SERVICE</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item372">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item383">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We approach all projects and clients realizing that we provide a service. Our objective is to provide the best service and guidance within our experience.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="3" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item172.hide,amp-accordion-item272.hide,amp-accordion-item372.hide,amp-accordion-item472.toggleVisibility,amp-accordion-item572.hide,amp-accordion-item672.hide">TEAM PLAYER</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item472">
+                    <h2 tabindex="3" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item183.hide,amp-accordion-item283.hide,amp-accordion-item383.hide,amp-accordion-item483.toggleVisibility,amp-accordion-item583.hide,amp-accordion-item683.hide">TEAM PLAYER</h2>
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item483">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             Our relationship with the client is as a member of the team. We wear many hats during the relationship and our focus is on the success of the client.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="4" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item172.hide,amp-accordion-item272.hide,amp-accordion-item372.hide,amp-accordion-item472.hide,amp-accordion-item572.toggleVisibility,amp-accordion-item672.hide">
+                    <h2 tabindex="4" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item183.hide,amp-accordion-item283.hide,amp-accordion-item383.hide,amp-accordion-item483.hide,amp-accordion-item583.toggleVisibility,amp-accordion-item683.hide">
                         MASTERY</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item572">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item583">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We strive to master our knowledge and develop intuitively. We are constantly researching and learning looking for new ways to apply our skills.</p>
                     </div>
                 </div>
 
                 <div class="accordion-item">
-                    <h2 tabindex="5" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item172.hide,amp-accordion-item272.hide,amp-accordion-item372.hide,amp-accordion-item472.hide,amp-accordion-item572.hide,amp-accordion-item672.toggleVisibility">
+                    <h2 tabindex="5" role="button" class="accordion-title mbr-fonts-style display-5" on="tap:amp-accordion-item183.hide,amp-accordion-item283.hide,amp-accordion-item383.hide,amp-accordion-item483.hide,amp-accordion-item583.hide,amp-accordion-item683.toggleVisibility">
                         LEADERSHIP</h2>
-                    <div class="accordion-item-body" hidden="" id="amp-accordion-item672">
+                    <div class="accordion-item-body" hidden="" id="amp-accordion-item683">
                         <p class="accordion-text mbr-text mbr-fonts-style display-6">
                             We are constantly looking for the shortest distance to accomplish your goals. Simplicity is the key but it does not mean simplication.</p>
                     </div>
