--- a/Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html
+++ b/Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html
@@ -136,7 +136,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 
 </section>
 
-<amp-animation layout="nodisplay" trigger="visibility" class="cid-r5DO2ch8Af" id="header7-2u" data-rv-view="983">
+<amp-animation layout="nodisplay" trigger="visibility" class="cid-r5DO2ch8Af" id="header7-2u" data-rv-view="1956">
     <script type="application/json">
     {
         "--width": "calc(0px - width('.animated-text'))",
@@ -371,7 +371,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                         <h4 class="card-title mbr-fonts-style display-5">
                             Cost Effective</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                           You could pay ,000 dollars to purchase video with unlimited commercial rights.<br><br>You can have a video with unlimited commercial rights for significantly LESS!!!</p>
+                           You could pay <strong><em>thousands&nbsp;of dollars</em></strong> to purchase video with unlimited commercial rights.<br><br>You can have a video with unlimited commercial rights for significantly LESS!!!</p>
                     </div>
                 </div>
             </div>
