create github pages

--- a/contact-serio-design-fx-best-video-social-media.html
+++ b/contact-serio-design-fx-best-video-social-media.html
@@ -28,8 +28,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
   <script async custom-element="amp-form" src="https://cdn.ampproject.org/v0/amp-form-0.1.js"></script>
   <script async custom-template="amp-mustache" src="https://cdn.ampproject.org/v0/amp-mustache-0.2.js"></script>
   
-  <meta name="Description" content="FREE Consultation of your web presence, branding, client persona and provide actionable recommendations for video marketing. ">
-<meta name="Keywords" content="web design,web designer milwaukee,social media video,strategy, digital marketing, video marketing, social media mamangement, milwaukee, immersive design, online presence, video production services">
+  <meta name="Keywords" content="web design,web designer milwaukee,social media video,strategy, digital marketing, video marketing, social media mamangement, milwaukee, immersive design, online presence, video production services">
 </head>
 <body><amp-sidebar id="sidebar" class="cid-qXUjqYiM2E" layout="nodisplay" side="right">
         <div class="builder-sidebar" id="builder-sidebar">
@@ -137,7 +136,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 
 </section>
 
-<amp-animation layout="nodisplay" trigger="visibility" class="cid-qY0HL4x6OJ" id="header7-8" data-rv-view="1659">
+<amp-animation layout="nodisplay" trigger="visibility" class="cid-qY0HL4x6OJ" id="header7-8" data-rv-view="1187">
     <script type="application/json">
     {
         "--width": "calc(0px - width('.animated-text'))",
@@ -174,7 +173,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 
         <div class="mbr-row mbr-justify-content-center">
             <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-6" data-form-type="formoid">
-                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5rmjLkYVYzC4sCog94mze6dba11CIpIzjqH3PogiyJHSWmkLVQJP22ZOzeRMzGX5C6ue2kdQcc0BnYLlLejrhzmSParUjCqej5Zi5D71j9Mf4UHZyzMXyvArRj2WgAfH">
+                <form class="mbr-form" method="post" target="_top" action-xhr="https://formoid.net/api/amp-form/push" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="I2Z5qVYIyOFbrrsGByHgg8gdhsrE1jetLgTxtYKkxY4hW2ddJc/WTHMB54wvgywHV0f5h6PLEG0uED6k2cLHI9zPd7ppCCmXBI8/1QLhJuyvYfisI0Bw54UbyrSJG6Oe">
                     <div submit-success="">
                         <template data-form-alert="" type="amp-mustache">Email sent successfully!</template>
                     </div>
@@ -252,5 +251,6 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 
   
   
-</body>
+<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
+  </body>
 </html>
