--- a/portfolio.html
+++ b/portfolio.html
@@ -180,7 +180,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
     </div>
 </section>
 
-<amp-animation layout="nodisplay" trigger="visibility" class="cid-qY4BzLOXtU" id="header7-u" data-rv-view="1759">
+<amp-animation layout="nodisplay" trigger="visibility" class="cid-qY4BzLOXtU" id="header7-u" data-rv-view="1287">
     <script type="application/json">
     {
         "--width": "calc(0px - width('.animated-text'))",
@@ -412,7 +412,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
     <div class="container-fluid">
         <div class="mbr-row mbr-justify-content-center">
             <div class="image-block mbr-col-sm-12 mbr-col-md-12 mbr-col-lg-6">
-                <amp-img src="assets/images/screenshot-640x310.png" layout="responsive" width="466.5806451612903" height="226" alt="Feng Shui Responsive Theme By Serio Design FX" class="mobirise-loader">
+                <amp-img src="assets/images/screenshot-640x310.png" layout="responsive" width="460.38709677419354" height="223" alt="Feng Shui Responsive Theme By Serio Design FX" class="mobirise-loader">
                     <div placeholder="">
                         <div class="mobirise-spinner">
                             <em></em>
@@ -447,7 +447,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
     <div class="container-fluid">
         <div class="mbr-row mbr-justify-content-center">
             <div class="image-block mbr-col-sm-12 mbr-col-md-12 mbr-col-lg-6">
-                <amp-img src="assets/images/joxi-screenshot-1531848158926-parrot-cafe-934x500.png" layout="responsive" width="467" height="250" alt="Mobirise" class="mobirise-loader">
+                <amp-img src="assets/images/joxi-screenshot-1531848158926-parrot-cafe-934x500.png" layout="responsive" width="461.396" height="247" alt="Mobirise" class="mobirise-loader">
                     <div placeholder="">
                         <div class="mobirise-spinner">
                             <em></em>
@@ -482,7 +482,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
     <div class="container-fluid">
         <div class="mbr-row mbr-justify-content-center">
             <div class="image-block mbr-col-sm-12 mbr-col-md-12 mbr-col-lg-6">
-                <amp-img src="assets/images/screenshot-1-640x310.png" layout="responsive" width="466.5806451612903" height="226" alt="Fashion Passion Video Web Theme #seriodesignfx" class="mobirise-loader">
+                <amp-img src="assets/images/screenshot-1-640x310.png" layout="responsive" width="460.38709677419354" height="223" alt="Fashion Passion Video Web Theme #seriodesignfx" class="mobirise-loader">
                     <div placeholder="">
                         <div class="mobirise-spinner">
                             <em></em>
@@ -588,5 +588,6 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 
   
   
-</body>
+<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
+  </body>
 </html>
