--- a/disclaimer.html
+++ b/disclaimer.html
@@ -211,5 +211,6 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
 
   
   
-</body>
+<input name="cookieData" type="hidden" data-cookie-text="We use cookies to give you the best experience. Read our <a href='privacy.html'>cookie policy</a>.">
+  </body>
 </html>
