--- a/disclaimer.html
+++ b/disclaimer.html
@@ -47,7 +47,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                 
                 <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="true">
                         Services
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-social-media-videos-milwaukee-digital-producer.html#header2-5a">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html" aria-expanded="false">Video Marketing</a><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="false">Video Subscriptions</a></div></li>
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="boost-landing-page-conversions-with-exclusive-videos.html">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html" aria-expanded="false">Video Marketing</a><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="false">Video Subscriptions</a></div></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="ourstory.html">
                         About Us
@@ -111,7 +111,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                 
                 <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="true">
                         Services
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-social-media-videos-milwaukee-digital-producer.html#header2-5a">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html" aria-expanded="false">Video Marketing</a><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="false">Video Subscriptions</a></div></li>
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="boost-landing-page-conversions-with-exclusive-videos.html">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html" aria-expanded="false">Video Marketing</a><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="false">Video Subscriptions</a></div></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="ourstory.html">
                         About Us
