--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                 
                 <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="true">
                         Services
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-social-media-videos-milwaukee-digital-producer.html#header2-5a">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html" aria-expanded="false">Video Marketing</a><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="false">Video Subscriptions</a></div></li>
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="boost-landing-page-conversions-with-exclusive-videos.html">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html" aria-expanded="false">Video Marketing</a><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="false">Video Subscriptions</a></div></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="ourstory.html">
                         About Us
@@ -116,7 +116,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
                 
                 <li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle text-white display-4" data-toggle="dropdown-submenu" aria-expanded="true">
                         Services
-                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="https://blog.seriodesignfx.com/best-social-media-videos-milwaukee-digital-producer.html#header2-5a">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html" aria-expanded="false">Video Marketing</a><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="false">Video Subscriptions</a></div></li>
+                    </a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="boost-landing-page-conversions-with-exclusive-videos.html">Video &nbsp;Landing Page</a><a class="dropdown-item text-white display-4" href="Best+Reasons+Why+Ecommerce+Retailers+Need+Exclusive+Video+Marketing+Services.html" aria-expanded="false">Video Marketing</a><a class="dropdown-item text-white display-4" href="superior-video-marketing-subscription-service.html" aria-expanded="false">Video Subscriptions</a></div></li>
                 <li class="nav-item">
                     <a class="nav-link link text-white display-4" href="ourstory.html">
                         About Us
@@ -180,7 +180,7 @@ body{font-family: Roboto;}blockquote{border-color: #f9d5bd;}.display-1{font-fami
     </div>
 </section>
 
-<amp-animation layout="nodisplay" trigger="visibility" class="cid-qY4BzLOXtU" id="header7-u" data-rv-view="892">
+<amp-animation layout="nodisplay" trigger="visibility" class="cid-qY4BzLOXtU" id="header7-u" data-rv-view="2888">
     <script type="application/json">
     {
         "--width": "calc(0px - width('.animated-text'))",
